--- a/README
+++ b/README
@@ -30,6 +30,7 @@ To compile from source, you need:
 
 - GNU make
 - GNU compiler collection (gcc)
+- rsvg (http://librsvg.sourceforge.net/)
 
 To cross-compile to (desktop) Windows, you need the mingw32 version of
 gcc:
