Makefile: disable SVG anti-aliasing
Inkscape doesn't seem to support disabling anti-aliasing, and we want
to continue using it.  This commit adds a XSLT file which adds the
style "shape-rendering:optimizeSpeed" to all paths, which will disable
anti-aliasing on librsvg.  Unfortunately, this adds yet another build
dependency (xsltproc).

--- a/README
+++ b/README
@@ -32,6 +32,7 @@ To compile from source, you need:
 - GNU compiler collection (gcc)
 - rsvg (http://librsvg.sourceforge.net/)
 - ImageMagick (http://www.imagemagick.org/)
+- xsltproc (http://xmlsoft.org/XSLT/xsltproc2.html)
 
 To cross-compile to (desktop) Windows, you need the mingw32 version of
 gcc:
