--- a/po/de.po
+++ b/po/de.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: xcsoar\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-08-01 18:12+0200\n"
-"PO-Revision-Date: 2010-08-01 23:04+0000\n"
+"PO-Revision-Date: 2010-08-03 07:09+0000\n"
 "Last-Translator: Folken Van Vanel <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-08-02 05:08+0000\n"
+"X-Launchpad-Export-Date: 2010-08-03 07:32+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: src/Airspace/AirspaceParser.cpp:155
@@ -128,10 +128,13 @@ msgid ""
 "\r\n"
 "Load anyway?"
 msgstr ""
+"Wegpunkt \"%s\"\r\n"
+"ausserhalb des Geländes\r\n"
+"trotzdem Laden?"
 
 #: src/WayPoint/WayPointFile.cpp:202
 msgid "Loading Waypoints..."
-msgstr ""
+msgstr "Lade Wegpunkte"
 
 #: src/Gauge/FlarmTrafficWindow.cpp:244
 msgid "No Traffic"
@@ -139,7 +142,7 @@ msgstr "Kein Verkehr"
 
 #: src/AirfieldDetails.cpp:158
 msgid "Loading Airfield Details File..."
-msgstr ""
+msgstr "Lade Flugplatzdetaildatei"
 
 #: src/ExpandMacros.cpp:367
 msgid ""
