--- a/po/pl.po
+++ b/po/pl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: xcsoar\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-08-01 18:12+0200\n"
-"PO-Revision-Date: 2010-08-02 14:15+0000\n"
+"PO-Revision-Date: 2010-08-02 20:09+0000\n"
 "Last-Translator: Michal Jezierski <Unknown>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-08-02 16:16+0000\n"
+"X-Launchpad-Export-Date: 2010-08-03 07:32+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: src/Airspace/AirspaceParser.cpp:155
@@ -370,7 +370,7 @@ msgstr "Czas lokalny"
 #. 40
 #: src/InfoBoxes/InfoBoxManager.cpp:195
 msgid "Time UTC"
-msgstr ""
+msgstr "Czas UTC"
 
 #. 41
 #: src/InfoBoxes/InfoBoxManager.cpp:197
@@ -380,7 +380,7 @@ msgstr ""
 #. 42
 #: src/InfoBoxes/InfoBoxManager.cpp:199
 msgid "Next Time To Go"
-msgstr ""
+msgstr "Czas do następnego"
 
 #. 43
 #: src/InfoBoxes/InfoBoxManager.cpp:201
@@ -395,27 +395,27 @@ msgstr ""
 #. 45
 #: src/InfoBoxes/InfoBoxManager.cpp:205
 msgid "Task Arrival Time"
-msgstr ""
+msgstr "Godzina zakończenia zadania"
 
 #. 46
 #: src/InfoBoxes/InfoBoxManager.cpp:207
 msgid "Next Arrival Time"
-msgstr ""
+msgstr "Godzina nad następnym punktem"
 
 #. 47
 #: src/InfoBoxes/InfoBoxManager.cpp:209
 msgid "Bearing Difference"
-msgstr ""
+msgstr "Odchyłka kursu"
 
 #. 48
 #: src/InfoBoxes/InfoBoxManager.cpp:211
 msgid "Outside Air Temperature"
-msgstr ""
+msgstr "Temperatura zewnętrzna"
 
 #. 49
 #: src/InfoBoxes/InfoBoxManager.cpp:213
 msgid "Relative Humidity"
-msgstr ""
+msgstr "Wilgotność względna"
 
 #. 50
 #: src/InfoBoxes/InfoBoxManager.cpp:215
