--- a/po/sk.po
+++ b/po/sk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: xcsoar\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-08-01 18:12+0200\n"
-"PO-Revision-Date: 2010-08-05 15:41+0000\n"
-"Last-Translator: Peter Brtko <Unknown>\n"
+"PO-Revision-Date: 2010-08-06 18:01+0000\n"
+"Last-Translator: Roman Stoklasa <Unknown>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-08-06 06:44+0000\n"
+"X-Launchpad-Export-Date: 2010-08-07 01:56+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: src/Airspace/AirspaceParser.cpp:155
@@ -2767,7 +2767,7 @@ msgstr "Popisky"
 
 #: Data/Dialogs/dlgFontEdit.xml:4
 msgid "Font Face"
-msgstr ""
+msgstr "Rez písma"
 
 #: Data/Dialogs/dlgTarget.xml:37
 msgid "Locked"
